--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,67 @@
-/* <!-- HEADER  -->
+ /* SECTION MENU */
 
-    <!-- BACKGROUND IMAGE  -->
-    <!-- LOGO + NAVBAR -->
+ #menu_container{
+    text-align: center;
+ }
 
+ #menu_container span{
+    font-size: 1.5rem;
+    text-transform: uppercase;
+ }
 
-    
-    <!-- FINE HEADER  -->
+ #menu_container h2 {
+    font-size: 1.5rem;
+    padding: 4vh 0;
+ }
 
+ #menu_container p{
+    font-size: 16px;
+    line-height: 1.5;
+    color: #9D9D9D;
+    padding-top: 2em ;
+ }
 
+ hr{
+    width: 35%;
+ }
 
-    <!-- MAIN -->
+ #menu_price_title{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    margin-top: 15vh;
+    margin-bottom: 8vh;
+ }
 
-    <!-- SECTION CAROSELLO -->
+ li{
+    margin: 5vh 0;
+ }
 
-    <!-- SECTION ABOUT US -->
+ @media screen and (max-width: 767px){
+   #bottom_border{ display: none;
 
-    <!-- SECTION BLOG  -->
-    <!-- BACKGROUND IMAGE -->
-    <!-- SEI DIV  -->
-    <!-- BUTTON -->
+   }
+ }
 
-    <!-- SECTION MENU -->
-    <!--  DUE DIV  -->
-    <!-- BUTTON -->
+ #menu_price p{
+    font-size: 14px;
+    line-height: 1.5;
+    color: #9D9D9D;
+    padding-top: 0.5em ;
+ }
 
-    <!-- SECTION NEWS -->
-    <!-- BACKGROUND IMAGE  -->
-    <!-- UN DIV  -->
+li div{
+    margin-left:0;
+}
 
-    <!-- SECTION CONTACTS  -->
-    <!-- <FIELDSET  -->
-    <!-- INPUT  -->
-    <!-- BUTTON  -->
+ li span{
+    padding-top: 2.5vh;
+    display: block;
+    color: #938463;
+ }
 
-     <!-- FINE MAIN -->
+ li h3{
+    font-size: 1.5rem;
+    margin: 0;
+    font-weight: 400;
+ }
 
-
-     
-
-    <!-- SECTION FOOTER  --> */
