--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@
     align-items: flex-end;
     overflow: hidden;
     position: relative;
-    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
   nav {
@@ -94,5 +94,74 @@
   #home h3 {
     width: 90%;
     margin: auto;
+  }
+
+  /*CAROUSEL*/
+
+  .carousel {
+    position: relative;
+    width: 100%;
+    height: 50vh;
+    /* padding: 10px 40px; */
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    background: #eee;
+    overflow: hidden;
+  }
+
+  /* .carousel h3 {
+    display: inline;
+  } */
+  .carousel img {
+    display: block;
+  }
+
+  .arrow {
+    padding: 0;
+    background: #ddd;
+    border-radius: 15px;
+    border: 1px solid gray;
+    font-size: 24px;
+    line-height: 24px;
+    color: #444;
+    display: block;
+  }
+
+  .arrow:focus {
+    outline: none;
+  }
+
+  .arrow:hover {
+    background: #ccc;
+    cursor: pointer;
+  }
+
+  /* .prev {
+    left: 7px;
+  }
+
+  .next {
+    right: 7px;
+  } */
+
+  .gallery {
+    width: 85%;
+    overflow: hidden;
+  }
+
+  .gallery ul {
+    height: 50vh;
+    width: 9999px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    transition: margin-left 250ms;
+    /* remove white-space between inline-block'ed li */
+    /* http://davidwalsh.name/remove-whitespace-inline-block */
+    font-size: 0;
+  }
+
+  .gallery li {
+    display: inline-block;
   }
 }
