--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* SECTION MENU */
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
   #home {
     height: 100vh;
   }
