--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,115 @@
- /* SECTION MENU */
+/* SECTION MENU */
 
- #menu_container{
-    text-align: center;
- }
-
- #menu_container span{
-    font-size: 1.5rem;
-    text-transform: uppercase;
- }
-
- #menu_container h2 {
-    font-size: 1.5rem;
-    padding: 4vh 0;
- }
-
- #menu_container p{
-    font-size: 16px;
-    line-height: 1.5;
-    color: #9D9D9D;
-    padding-top: 2em ;
- }
-
- hr{
-    width: 35%;
- }
-
- #menu_price_title{
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    margin-top: 15vh;
-    margin-bottom: 8vh;
- }
-
- li{
-    margin: 5vh 0;
- }
-
- @media screen and (max-width: 767px){
-   #bottom_border{ display: none;
-
-   }
- }
-
- #menu_price p{
-    font-size: 14px;
-    line-height: 1.5;
-    color: #9D9D9D;
-    padding-top: 0.5em ;
- }
-
-li div{
-    margin-left:0;
+#menu {
+  width: 92%;
+  margin: 0 auto;
 }
 
- li span{
-    padding-top: 2.5vh;
-    display: block;
-    color: #938463;
- }
+#menu_container,
+#menu_price {
+  width: 100%;
+  margin: 0;
+}
 
- li h3{
-    font-size: 1.5rem;
-    margin: 0;
-    font-weight: 400;
- }
+#menu_container {
+  text-align: center;
+}
 
+#menu_container span {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+#menu_container h2 {
+  font-size: 1.5rem;
+  padding: 4vh 0;
+}
+
+#menu_container p {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #9d9d9d;
+  padding-top: 2em;
+}
+
+hr {
+  width: 35%;
+}
+
+#menu_price_title {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  margin-top: 15vh;
+  margin-bottom: 8vh;
+}
+
+/* MENU LIST  */
+
+#menu_price p {
+  font-size: 14px;
+  line-height: 1.5;
+  color: #9d9d9d;
+  padding-top: 0.5em;
+}
+
+ul {
+  margin-bottom: 12vh;
+}
+
+li div {
+  margin-left: 0;
+}
+
+li span {
+  padding-top: 2.5vh;
+  display: block;
+  color: #938463;
+}
+
+li h3 {
+  font-size: 1.5rem;
+  margin: 0;
+  font-weight: 400;
+  position: relative;
+  z-index: 99;
+}
+
+li {
+  margin: 5vh 0;
+}
+
+.bottom_border {
+  position: absolute;
+  top:0;
+  width: 100%;
+  height: 1px;
+  border: 1px dotted #c9c9c9;
+  margin-top: 1.5vh;
+}
+
+@media screen and (max-width: 767px) {
+  #bottom_border {
+    display: none;
+  }
+}
+
+/* MENU BUTTON */
+
+#menu_btn {
+  font-family: "first-font";
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: bold;
+  float: right;
+  padding: 5vh 16vh;
+  background-color: white;
+  border: 1px solid #ff530a;
+  color: #ff530a;
+  margin-bottom: 5vh;
+  transition: 0.5s;
+}
+
+#menu_btn:hover {
+  background-color: #ff530a;
+  color: white;
+}
