SECTION BLOG : html e css completati

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,154 @@
+/* SECTION MENU */
+/* @media screen and (min-width: 320px) {
+    #home {
+        height: 100vh;
+    }
+
+    header {
+        height: 30%;
+        width: 100%;
+        background-image: url(../images/header.jpg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        overflow: hidden;
+        position: relative;
+        margin-top: 1.5rem;
+    }
+
+    nav {
+        height: 35%;
+        width: 90%;
+        background-color: #fff;
+        opacity: 0.8;
+        display: flex;
+        align-items: baseline;
+        justify-content: space-evenly;
+        position: absolute;
+        bottom: 0;
+        padding-bottom: 1rem;
+        padding-top: 1rem;
+    }
+
+    #myLinks {
+        display: none;
+    }
+
+    nav ul li a {
+        color: grey;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+        padding: 0;
+    }
+
+    nav a.icon {
+        color: #ff530a;
+    }
+
+    nav a:hover {
+        background-color: #fff;
+        opacity: 0.8;
+        padding-top: 0.5rem;
+    }
+
+    #home h3 {
+        width: 90%;
+        margin: auto;
+    }
+} */
+
+
+/* SECTION ABOUT US  */
+#about-us {
+    background-color: #f6f6f6;
+    padding-bottom: 70px;
+}
+
+#about-us div {
+    text-align: center;
+}
+
+#about-us img {
+    margin-top: 70px;
+    margin-bottom: 40px;
+}
+
+#about-us h1 {
+    font-size: 1.3em;
+}
+
+#about-us span {
+    font-size: 1.4em;
+}
+
+#about-us hr {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 140px;
+    border: 0.5px solid lightgray;
+}
+
+#about-us p {
+    line-height: 1.5;
+    color: grey;
+}
+
+/* MEDIA QUERY */
+
+@media screen and (min-width: 768px) {
+
+    /* ABOUT US */
+    #about-us {
+        background-color: #f6f6f6;
+        padding-bottom: 100px;
+    }
+
+    #about-us h1 {
+        font-size: 1.8em;
+    }
+
+    #about-us hr {
+        width: 110px;
+    }
+
+    /* BLOG */
+    .flex-box {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    #section-blog .layer {
+        max-width: 50%;
+    }
+
+    #section-blog img {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    /* ABOUT US  */
+    #about-us h1 {
+        font-size: 2em;
+    }
+
+    #about-us hr {
+        width: 110px;
+    }
+}
+
+
 /* SECTION BLOG  */
 
 #section-blog {
     background-image: url('../images/overlay-pattern2.png'), url('../images/blog/blog-bg.jpg');
     text-align: center;
     background-attachment: fixed;
-    padding-bottom: 100px;
+    padding-bottom: 220px;
 }
 
 #section-blog h1 {
@@ -34,6 +178,7 @@
 .flex-box {
     background-color: white;
     padding-bottom: 10px;
+    /*modificare nella query */
 }
 
 .flex-box img {
@@ -45,6 +190,7 @@
     font-weight: 200;
     margin-top: 0;
 }
+
 
 #tophtre {
     margin-top: 40px;
@@ -59,22 +205,99 @@
     margin-top: 20px;
 }
 
-.section-blog-button {
+#section-blog button {
+    font-family: 'first-font';
     margin-top: 50px;
-
     background-color: #ff530a;
-
     padding: 30px;
+    float: left;
+    border: none;
+    width: 240px;
+
 }
+
+.section-blog-button a {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+
+
+
+
+
+
+
 
 
 /* SEI RIMASTO QUI  */
 /* SEI RIMASTO QUI  */
 /* SEI RIMASTO QUI BUTTON */
 
+/* SECTION MENU */
 
-.section-blog-button a {
-    color: white;
-    text-decoration: none;
+#menu_container {
+    text-align: center;
+}
 
+#menu_container span {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+
+#menu_container h2 {
+    font-size: 1.5rem;
+    padding: 4vh 0;
+}
+
+#menu_container p {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #9d9d9d;
+    padding-top: 2em;
+}
+
+hr {
+    width: 35%;
+}
+
+#menu_price_title {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    margin-top: 15vh;
+    margin-bottom: 8vh;
+}
+
+li {
+    margin: 5vh 0;
+}
+
+@media screen and (max-width: 767px) {
+    #bottom_border {
+        display: none;
+    }
+}
+
+#menu_price p {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #9d9d9d;
+    padding-top: 0.5em;
+}
+
+li div {
+    margin-left: 0;
+}
+
+li span {
+    padding-top: 2.5vh;
+    display: block;
+    color: #938463;
+}
+
+li h3 {
+    font-size: 1.5rem;
+    margin: 0;
+    font-weight: 400;
 }
